@@ -375,6 +375,8 @@ OPTIMIZATIONS
 
 BUG FIXES
 
+PIG-1527: No need to deserialize UDFContext on the client side (rding)
+
 PIG-1507: Full outer join fails while doing a filter on joined data (daijy)
 
 PIG-1493: Column Pruner throw exception "inconsistent pruning" (daijy)
